--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -1,4 +1,21 @@
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
 main {
   width: 80%;
   margin-left: 10%;
+  flex: 1;
+}
+
+footer {
+  background: #FFE8F3;
+  width: 100%;
+  text-align: center;
 }
