--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -8,6 +8,31 @@ body {
   margin: 0;
 }
 
+nav {
+  flex: 1;
+  width: 100%;
+  background: #FF66AD;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+}
+
+nav ul li {
+  padding: 1em;
+}
+
+nav ul li:hover {
+  background: #FF57A5;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+}
+
 main {
   width: 80%;
   margin-left: 10%;
