--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -55,8 +55,12 @@ footer {
 #projects-list li {
   padding: 1rem;
   box-shadow: 5px 5px 5px grey;
-  background: #FCFCFC;
   margin-bottom: 1rem;
+  background: #FCFCFC;
+  background: -webkit-linear-gradient(white, #FFE8F3); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, #FFE8F3); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white, #FFE8F3); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, #FFE8F3); /* Standard syntax */
 }
 
 #projects-list li h1:hover {
