--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=ABeeZee');
 html {
   height: 100%;
 }
@@ -6,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'ABeeZee', sans-serif;
   background: #F7F7F7;
 }
 
