Added styles for all the links on the main section.

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -42,6 +42,16 @@ main {
   padding: 0.5rem;
 }
 
+main a {
+  text-decoration: none;
+  color: black;
+}
+
+main a:hover {
+  text-shadow: 1px 1px 3px pink;
+  color: #FF66AD;
+}
+
 footer {
   background: #FFE8F3;
   width: 100%;
@@ -51,6 +61,7 @@ footer {
 
 #projects-list {
   list-style: none;
+  padding-left: 0;
 }
 
 #projects-list li {
@@ -62,10 +73,6 @@ footer {
   background: -o-linear-gradient(white, #FFE8F3); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(white, #FFE8F3); /* For Firefox 3.6 to 15 */
   background: linear-gradient(white, #FFE8F3); /* Standard syntax */
-}
-
-#projects-list li h1:hover {
-  text-shadow: 1px 1px 3px pink;
 }
 
 #projects-list li img {
