Improved the style for the social media icons.

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -59,6 +59,10 @@ footer {
   font-size: 0.75rem;
 }
 
+.social-media a {
+  margin-right: 1rem;
+}
+
 #projects-list {
   list-style: none;
   padding-left: 0;
