--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -47,12 +47,7 @@ main a {
   text-decoration: none;
   color: white;
 }
-/*
-main a:hover {
-  text-shadow: 1px 1px 3px pink;
-  color: #FF66AD;
-}
-*/
+
 footer {
   background: #FFE8F3;
   width: 100%;
@@ -67,15 +62,18 @@ footer {
 #projects-list {
   list-style: none;
   padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-around;
 }
 
 #projects-list li {
   padding: 1rem;
   box-shadow: 5px 5px 5px grey;
-  margin: 1rem;
   background: #FCFCFC;
-  float: left;
   width: 43%;
+  margin-bottom: 2rem;
 }
 
 #projects-list li:nth-child(even) {
@@ -94,6 +92,7 @@ footer {
 
 .overlay-parent {
   position: relative;
+  height: 100%;
 }
 
 .overlay-parent:hover .overlay {
@@ -129,7 +128,7 @@ footer {
 #projects-list li img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 #index-image {
