Added the ability to change languages.

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -18,8 +18,13 @@ nav {
 
 nav ul {
   display: flex;
+  justify-content: space-between;
   list-style: none;
   margin: 0;
+}
+
+nav ul div {
+  display: inherit;
 }
 
 nav ul li {
