Added some media queries to improve user experience on mobile devices.

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -16,6 +16,12 @@ nav {
   background: #FF66AD;
 }
 
+@media (max-width: 408px) {
+  nav {
+    font-size: 0.9rem;
+  }
+}
+
 nav ul {
   display: flex;
   justify-content: space-between;
@@ -158,15 +164,32 @@ footer {
   background: white;
   box-shadow: 5px 5px 5px grey;
   margin-bottom: 5px;
+  width: 90%;
+  margin-left: 5%;
+}
+
+@media (min-width: 470px) {
+  .considerations {
+    width: 80%;
+    margin-left: 10%;  
+  }
 }
 
 .considerations article {
-  padding: 3rem;
+  padding: 2rem;
+  padding-top: 1rem;
   text-align: justify;
 }
 
-.considerations header {
-  font-size: 2.5rem;
+@media (min-width: 680px) {
+  .considerations article{
+    padding: 3rem;
+    padding-top: 1rem;
+  }
+}
+
+.considerations header h1{
+  font-size: 2rem;
 }
 
 .considerations li {
